--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-expand-lg bg-white shadow py-3 sticky-top">
             <div class="container">
               <a class="navbar-brand" href="#">LOGO
-                <!--<img src="" alt="">-->
+                <!--<img src="" alt="">//-->
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -46,39 +46,56 @@
             </div>
           </nav>
     </header>
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-             
+    <div id="heroSlider" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+
           <div class="carousel-item text-center bg-cover vh-100 active slide-1">
-            <div class="container h-100 d-flex align-items-center justify-content-center">
-              <div class="row justify-content-center">
-                <div class="col-lg-8">
-                  <h6 class="text-white">WELCOME TO MIRABELLE</h6>
-                  <h1 class="display-1 my-3 fw-bold text-white">Enjoy Delicious Sushi Food</h1>
-                  <a href="#" class="btn btn-brand">Reservation</a>
-                </div>
+              <div class="container h-100 d-flex align-items-center justify-content-center">
+                  <div class="row justify-content-center">
+                      <div class="col-lg-8">
+                          <h6 class="text-white">WELCOME TO MIRABELLE</h6>
+                          <h1 class="display-1 my-3 fw-bold text-white">Enjoy Delicious Sushi Food</h1>
+                          <a href="#" class="btn btn-brand" id="btn">Reservation</a>
+                      </div>
+                  </div>
               </div>
-            </div>
           </div>
 
+          <div class="carousel-item text-center bg-cover vh-100 slide-2">
+              <div class="container h-100 d-flex align-items-center justify-content-center">
+                  <div class="row justify-content-center">
+                      <div class="col-lg-8">
+                          <h6 class="text-white">WELCOME TO MIRABELLE</h6>
+                          <h1 class="display-1 my-3 fw-bold text-white">Fresh & Tasty Food</h1>
+                          <a href="#" class="btn btn-brand" id="btn">Reservation</a>
+                      </div>
+                  </div>
+              </div>
+          </div>
+
+          <div class="carousel-item text-center bg-cover vh-100 slide-3">
+            <div class="container h-100 d-flex align-items-center justify-content-center">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8">
+                        <h6 class="text-white">WELCOME TO MIRABELLE</h6>
+                        <h1 class="display-1 my-3 fw-bold text-white">Awesome & Savory Recipes</h1>
+                        <a href="#" class="btn btn-brand" id="btn">Reservation</a>
+                    </div>
+                </div>
+            </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#heroSlider" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#heroSlider" data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-
+      </button>
+    </div>
     
-
-
-
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
 </body>
