--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-expand-lg bg-white shadow py-3 sticky-top">
             <div class="container">
               <a class="navbar-brand" href="#">
-                <img src="logoo.png" alt="" style="width:80px">
+                <img src="img/logoo.png" alt="" style="width:80px">
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -24,19 +24,19 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
                   <li class="nav-item">
-                    <a class="nav-link" href="#Home">Home</a>
+                    <a class="nav-link" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#About">About</a>
+                    <a class="nav-link" href="about.html">About</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#Menu">Menu</a>
+                    <a class="nav-link" href="menu.html">Menu</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#Pictures">Pictures</a>
+                    <a class="nav-link" href="gallery.html">Gallery</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#Contact">Contact</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                   </li>
                 </ul>
                 <form class="d-flex" role="search">
