--- a/about.html
+++ b/about.html
@@ -8,6 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="img/icons.png">
     <title>Mirabelle</title>
 </head>
 <body>
@@ -48,29 +50,27 @@
       </nav>
   </header>
 
-
-  <section id="about">
+ <section class="about">
     <div class="container">
         <div class="row gy-4 align-items-center">
-            <div class="col-lg-5">
-                <img src="" alt="">
+            <div class="col-lg-3 mt-5">
+                <img src="img/chef.jpg" alt="">
             </div>
-            <div class="col-lg-5">
-                <h1>About us</h1>
+            <div class="col-lg-8">
+                <h1 style="font-family: 'Dancing Script', cursive; color: #F58d17;">About us</h1>
                 <div class="divider my-4"></div>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo nesciunt voluptates doloribus
-                    quidem. Dignissimos, asperiores molestias?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur adipisci velit corporis
-                    debitis blanditiis hic, ipsam magni exercitationem ullam quibusdam a ad!</p>
-                <a href="#" class="btn btn-brand">Explore Menu</a>
-            </div>
+                <h2>We Provide Healthy Food</h2>
+                <p>Food for us commes from our relatives, whether they have wings or fins roots.
+                  That is how we consider food. Food has a culture. It has a History. It has a Story. It has Relationships.</p>
+                <p>Mirabelle serve high-quality, fresh food based on a unique combination of traditional sushi and yakitori sticks from the grill. 
+                  So for those less keen on fish, there is a selection of chicken, pork, beef and vegetable skewers - all grilled fresh to order.</p>
+                <p>Attracting both families and trendsetters, Mirabelle is known for making the fashionable, friendly and affordable.</p>
+                <button type="button" class="btn btn-outline-dark">Explore Menu</button>
+                </div>
         </div>
     </div>
+
 </section>
-  
-
-
-  
 
 
 
