reservation and some custom

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="img/icons.png">
+    <link rel="icon" type="image/x-icon" href="img/mirabelle.png">
     <title>Mirabelle</title>
 </head>
 <body>
@@ -43,7 +43,7 @@
             </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+              <button class="btn btn-cover" type="submit">Search</button>
             </form> 
           </div>
         </div>
@@ -57,15 +57,15 @@
                 <img src="img/chef.jpg" alt="">
             </div>
             <div class="col-lg-8">
-                <h1 style="font-family: 'Dancing Script', cursive; color: #F58d17;">About us</h1>
+                <h1 class="d-flex justify-content-center"style="font-family: 'Dancing Script', cursive; color: #F58d17;">About us</h1>
                 <div class="divider my-4"></div>
-                <h2>We Provide Healthy Food</h2>
+                <h4>We Provide Healthy Food</h4>
                 <p>Food for us commes from our relatives, whether they have wings or fins roots.
                   That is how we consider food. Food has a culture. It has a History. It has a Story. It has Relationships.</p>
                 <p>Mirabelle serve high-quality, fresh food based on a unique combination of traditional sushi and yakitori sticks from the grill. 
                   So for those less keen on fish, there is a selection of chicken, pork, beef and vegetable skewers - all grilled fresh to order.</p>
                 <p>Attracting both families and trendsetters, Mirabelle is known for making the fashionable, friendly and affordable.</p>
-                <button type="button" class="btn btn-outline-dark">Explore Menu</button>
+                <button type="button" class="btn btn-cover">Explore Menu</button>
                 </div>
         </div>
     </div>
