--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="img/icons.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="img/mirabelle.png">
     <title>Mirabelle</title>
 </head>
 <body>
@@ -42,15 +43,14 @@
                 </ul>
                 <form class="d-flex" role="search">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
+                  <button class="btn btn-cover" type="submit">Search</button>
                 </form> 
               </div>
             </div>
           </nav>
     </header>
     <div class="container mt-5">
-      <h1>Contact Us</h1>
-      <p>Get in touch with us using the form below or visit us at one of our locations:</p>
+      <h1 class="d-flex justify-content-center" style="font-family: 'Dancing Script', cursive; color: #F58d17;">Contact Us</h1>
 
       <!-- Locations -->
       <h2>Locations</h2>
@@ -95,7 +95,7 @@
             <label for="message">Message</label>
             <textarea class="form-control" id="message" rows="3"></textarea>
           </div>
-          <button type="submit" class="btn btn-primary">Send</button>
+          <button type="submit" class="btn btn-outline-dark">Send</button>
         </form>
 
 
