--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="img/icons.png">
+    <link rel="icon" type="image/x-icon" href="img/mirabelle.png">
     <title>Mirabelle</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-lg bg-white shadow py-3 sticky-top">
             <div class="container">
               <a class="navbar-brand" href="#">
-                <img src="img/logoo.png" alt="" style="width:80px">
+                <img src="img/logoo.png" alt="" style="width:90px">
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -42,7 +42,7 @@
                 </ul>
                 <form class="d-flex" role="search">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
+                  <button class="btn btn-cover" type="submit">Search</button>
                 </form> 
               </div>
             </div>
@@ -96,6 +96,27 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
       </button>
+    </div>
+
+    <div class="container d-flex align-content-center pt-2">
+      <div class="col-sm-6 m-2 mb-sm-0">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Special title treatment</h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-cover">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6 m-2">
+        <div class="card bg-cover">
+          <div class="card-body">
+            <h5 class="card-title">Special title treatment</h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-cover">Go somewhere</a>
+          </div>
+        </div>
+      </div>
     </div>
 
     <footer class="bg-white shadow text-center text-white">
