--- a/menu.html
+++ b/menu.html
@@ -8,7 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="img/icons.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="img/mirabelle.png">
     <title>Mirabelle</title>
 </head>
 <body>
@@ -42,16 +43,15 @@
                 </ul>
                 <form class="d-flex" role="search">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
+                  <button class="btn btn-cover" type="submit">Search</button>
                 </form> 
               </div>
             </div>
           </nav>
     </header>
 
- <section class= "container my-5" >
-    <div class="d-flex justify-content-center">
-        <h1 class="serif">Menu</h1></div>
+    <section class= "container my-5" >
+        <h1 class="d-flex justify-content-center" style="font-family: 'Dancing Script', cursive; color: #F58d17;">Menu</h1>
         <div class="col-12 col-lg-8">
             <h3 class="serif">STARTERS</h3>
             <li class="list-group-item d-flex justify-content-between align-items-start p-3 gap-3">
@@ -63,37 +63,37 @@
             <li class="list-group-item d-flex justify-content-between align-items-start p-3 gap-3">
                 <div class="me-2 me-auto">
                     <div class="fw-bold mb-1">Salmon Sashimi</div>
-                    <span class="Price bg-warning rounded-pill fs-6">2,95&#8364;</span>
+                    <span class="badge bg-info rounded-pill fs-6">2,95&#8364;</span>
                 </div>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-start p-3 gap-3">
                 <div class="me-2 me-auto">
                     <div class="fw-bold mb-1">Spicy salmon tartar<span style="color:red ; font-weight: lighter;"><i> (Hot)</i></span></div>
-                    <span class="Price bg-warning rounded-pill fs-6">2,95&#8364;</span>
+                    <span class="badge bg-secondary rounded-pill fs-6">2,95&#8364;</span>
                 </div>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-start p-3 gap-3">
                 <div class="me-2 me-auto">
                     <div class="fw-bold mb-1">Shrimp tempura</div>
-                    <span class="Price bg-warning rounded-pill fs-6">11,95&#8364;</span>
+                    <span class="badge bg-warning rounded-pill fs-6">11,95&#8364;</span>
                 </div>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-start p-3 gap-3">
                 <div class="me-2 me-auto">
                     <div class="fw-bold mb-1">Chicken vegetable gyoza</div>
-                    <span class="Price bg-warning rounded-pill fs-6">9,95&#8364;</span>
+                    <span class="badge bg-dark rounded-pill fs-6">9,95&#8364;</span>
                 </div>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-start p-3 gap-3">
                 <div class="me-2 me-auto">
                     <div class="fw-bold mb-1">Beef gyoza</div>
-                    <span class="Price bg-warning rounded-pill fs-6">7,95&#8364;</span>
+                    <span class="badge bg-dark rounded-pill fs-6">7,95&#8364;</span>
                 </div>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-start p-3 gap-3">
                 <div class="me-2 me-auto">
                     <div class="fw-bold mb-1">Vegetables gyoza<span style="color:rgb(17, 172, 17); font-weight: lighter;"><i> (Veggie)</i></span></div>
-                    <span class="Price bg-warning rounded-pill fs-6">6,95&#8364;</span>
+                    <span class="badge bg-dark rounded-pill fs-6">6,95&#8364;</span>
                 </div>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-start p-3 gap-3">
@@ -181,7 +181,7 @@
         </li>
  </section>
 
-<footer class="bg-white shadow text-center text-white">
+<footer class="shadow text-center text-white">
       <!-- Grid container -->
       <div class="container p-4 pb-0">
         <!-- Section: Social media -->
