--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <div class="card-body">
             <h5 class="card-title">Mirabelle Newsletter + 5% Promo</h5>
             <p class="card-text">Sign up here to receive our news, events and promotions via our newsletter. And you'll get 5% discount.</p>
-            <a href="#" class="btn btn-cover">SUBSCRIBE HERE</a>
+            <a href="#" class="btn btn-cover">Click here</a>
           </div>
         </div>
       </div>
@@ -116,7 +116,7 @@
           <div class="card-body">
             <h5 class="card-title">New Year's Eve With Mirabelle</h5>
             <p class="card-text">Let us be a part of the celebration and leave the cooking to us. Book a table or order takeaway now!</p>
-            <a href="#" class="btn btn-cover">READ MORE</a>
+            <a href="#" class="btn btn-cover">Read more</a>
           </div>
         </div>
       </div>
