--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
                   That is how we consider food. Food has a culture. It has a History. It has a Story. It has Relationships.</p>
                 <p>We serve high-quality, fresh food based on a unique combination of traditional sushi and yakitori sticks from the grill. 
                   So for those less keen on fish, there is a selection of chicken, pork, beef and vegetable skewers - all grilled fresh to order.</p>
-                <p>Mirabelle has been passionately committed since our beginning to being unlike any other sushi experience available. Our progressive approach to sushi pays homage to the artisanal beauty of traditional sushi, while also pushing the boundaries by combining sushi with other global cuisines and flavor profiles. The result is a wildly unique experience that appeals to sushi fanatics and to those who have never tried sushi before. It has helped us win thousands of devoted fans who make Sushi Shop a part of their daily lives.</p>
+                <p>Mirabelle has been passionately committed since our beginning to being unlike any other sushi experience available. Our progressive approach to sushi pays homage to the artisanal beauty of traditional sushi, while also pushing the boundaries by combining sushi with other global cuisines and flavor profiles. The result is a wildly unique experience that appeals to sushi fanatics and to those who have never tried sushi before. It has helped us win thousands of devoted fans who make Mirabelle a part of their daily lives.</p>
                 <p>Attracting both families and trendsetters, Mirabelle is known for making the fashionable, friendly and affordable.</p>
                 <a href="menu.html" class="btn btn-cover">Explore Menu</a>
                 </div>
